     the selected game (bug #7471)
   * multiplayer lobby: tab completion works for all player names now,
     not only for those which are not in a game (bug #9350)
 * graphics
   * fixed a glitch with the undo of recruit or recall on high places.
   * Improve rendering of "black stripes": don't hide footsteps and fog
   * Improve rendering of grid : draw under fog, shroud and "black stripes"
 * user interface:
   * Enable "Save Game" and "View Chat Log" menu entries in replay mode.
   * Add an additional line below the minimap in the "Multiplayer->Create game"
     screen that displays the size of the selected map. (patch #776 by uso)
   * Add a tooltip with the experience modifier for the units XP display.
   * add an empty attack icon in attack dialog when needed (this also remove
     an error message, bug #9570)
   * better "choose attack direction using the last highlighted hex" on pack
     of units (bug #9649)
   * attack/move cursors and attack direction indicator are not used when
     observing (bug #9610)
   * 'help' and 'more' button in the title screen now also have a tooltip
     (bug #9618 patch #790)
   * added a hotkey for clearing the chat messages (patch #770)
 * WML engine:
   * now [base_unit]id= inside [unit] can extend upon existing unit types
   * new tag [filter_radius] to allow greater control over radius expansion
     when using the standard location filter
   * fix a bug where containers could only be stored at the top-level
   * fix a bug where both x and y had to be specified in location filters
   * better handling/reporting of invalid WML variable type usage
   * new key find_in= to allow searching a variable of previously stored
     locations when using the standard location filter
   * new key find_in= to allow searching a variable of previously stored
     units when using the standard unit filter
   * new extra_defines= key to define in campaigns some other preprocessor
     symbol *before* the files are repreprocessed